add copywriting, images, hiding form function, background color and other styling elements.

--- a/css/styles.css
+++ b/css/styles.css
@@ -26,9 +26,14 @@ p {
 }
 body {
   font-family: sans-serif;
-
+  background-color: lavender;
 }
-
+.form-group {
+  width: 400px;
+}
+ul li {
+  font-size: 25px;
+}
 .name {
  font-weight: bold;
 }
